--- a/CoSTA/Analyzing_Slide-seq_via_CoSTA.ipynb
+++ b/CoSTA/Analyzing_Slide-seq_via_CoSTA.ipynb
@@ -206,8 +206,8 @@
     "for i in range(n):\n",
     "    resize_X.append(cv2.resize(ori_X[i,:,:], (48,48)))\n",
     "    \n",
-    "resize_X = np.asarray(resize_X)\n",
-    "new_X=resize_X.copy()\n",
+    "ori_X = np.asarray(resize_X)\n",
+    "new_X=ori_X.copy()\n",
     "new_X = new_X.reshape((n,1,48,48))\n",
     "del resize_X,a,b,i\n"
    ]
@@ -473,7 +473,7 @@
     }
    ],
    "source": [
-    "pattern = pd.DataFrame(new_X.reshape(new_X.shape[0],48*48))\n",
+    "pattern = pd.DataFrame(ori_X.reshape(ori_X.shape[0],48*48))\n",
     "pattern.index = gene.index\n",
     "\n",
     "correlated = []\n",
